<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/blog"
        android:enabled="true"
        android:icon="@drawable/ic_blog"
        android:title="@string/blog"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/project"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/project_type"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/me"
        app:showAsAction="ifRoom" />

</menu>
